SimpleComplex/Config 2.x, 2018-12-15
------------------------------------
- CLI command config-set-sub to set config sub item; an array|object bucket.
- Release 2.1.2.

SimpleComplex/Config 2.x, 2018-12-08
------------------------------------
- Slightly better error messages when refreshing non-existent config store,
  and when using too long keys.
- Release 2.1.1.

SimpleComplex/Config 2.x, 2018-07-29
------------------------------------
- Register CLI command provider in document root .ini file.
  And don't provide own cli.phpsh; rely on the Utils' package's generic
  cli.phpsh.
- Release 2.1.

SimpleComplex/Config 2.x, 2018-06-25
------------------------------------
- Discovery mode require that .ini files are placed in parent dirs 'config-ini'.
- Discovery mode configurable (and more explicit).
- Release 2.0.1.

SimpleComplex/Config 2.x, 2018-06-24
------------------------------------
- Config store names 'example' and 'ini-source-packages' are now illegal.
- Renamed ini source packages lists' extension, and they shall no longer contain
  vendor-dir; uses Utils vendorDir() instead.
- Path names are certainly allowed to be integers; because the path list may
  well be numerically indexed list.
- Release 2.0.

SimpleComplex/Config 2.x, 2018-06-23
------------------------------------
- Competing associative keys (and sub-keys) both having non-array value
  within same ini path (base, override) is now illegal; because there can't
  be any guarantee that the same value will 'win' on every config refresh.
- New .ini file discovery mode, using base path file
  config.[store-name].discover-ini-source-packages.ini.
  Backwards compatible.
- CLI config-refresh options allow-none and verbose.

SimpleComplex/Config 1.x, 2018-06-19
------------------------------------
- Use Utils PathList instead of deprecated predecessor.
- Release 1.4.

SimpleComplex/Config 1.x, 2018-04-07
------------------------------------
- Package requires Utils package ^1.2.