@@ -2,7 +2,7 @@
 /**
  * SimpleComplex PHP Config
  * @link      https://github.com/simplecomplex/php-config
- * @copyright Copyright (c) 2017 Jacob Friis Mathiasen
+ * @copyright Copyright (c) 2017-2019 Jacob Friis Mathiasen
  * @license   https://github.com/simplecomplex/php-config/blob/master/LICENSE (MIT License)
  */
 declare(strict_types=1);
@@ -46,6 +46,9 @@ class Config extends IniSectionedConfig
      *      Default: global
      *
      * @return IniSectionedConfig|static
+     *
+     * @throws \InvalidArgumentException|\Psr\SimpleCache\InvalidArgumentException
+     * @throws \Throwable
      */
     public static function getInstance($name = 'global')
     {
